# lib_oci

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: BuildTreePackageTargets.cmake.in  FindAnyProject.cmake  FindExtProject.cmake  PackageTargets.cmake.in  util.cmake
qt4/: CMakeLists.txt  qsql_oci.h  qsqlcachedresult_p.h
qt4/oci/: main.cpp  qsql_oci.h
qt4/ocispatial/: qsql_ocispatial.h
qt5/: CMakeLists.txt
qt5/oci/: qsql_oci.cpp
qt5/ocispatial/: qsql_ocispatial.cpp
